# libappimage

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  configure_appimage_module_helper.cmake
src/cli/: CMakeLists.txt  main.cpp
src/libappimage/: AppImage.cpp  AppImage.h  AppImageContentFile.h  AppImageContentFilesIterator.h  AppImageDummyStreamBuffer.h  AppImageDummyTraversal.cpp  AppImageDummyTraversal.h  AppImageFileStream.cpp  AppImageFileStream.h  AppImageFormat.h  AppImageIStream.cpp  AppImageIStream.h  AppImageIterator.cpp  AppImageIterator.h  AppImageTraversal.cpp  AppImageTraversal.h  AppImageType1StreamBuffer.cpp  AppImageType1StreamBuffer.h  AppImageType1Traversal.cpp  AppImageType1Traversal.h  AppImageType2StreamBuffer.cpp  AppImageType2StreamBuffer.h  AppImageType2Traversal.cpp  AppImageType2Traversal.h  CMakeLists.txt  Errors.h  FileUtils.cpp  FileUtils.h  MagicBytesChecker.cpp  MagicBytesChecker.h  appimage.cpp  appimage.h  appimage_handler.c  appimage_handler.h  appimage_handler_type1.c  appimage_handler_type1.h  appimage_handler_type2.c  config.h.in  configure_appimage_module_helper.cmake  desktop_integration.c  (+8 more)
src/libappimage/core/: AppImage.cpp  AppImage.h  CMakeLists.txt  Exceptions.h  FileStream.cpp  FileStream.h  FilesIterator.cpp  FilesIterator.h  PayloadIterator.cpp  Traversal.cpp  Traversal.h  appimage.cpp  appimage.h  exceptions.h  file_istream.cpp  file_istream.h  files_iterator.cpp  files_iterator.h  format.h  traversal.h
src/libappimage/core/impl/: CMakeLists.txt  PayloadIStream.h  StreambufFallback.h  StreambufType1.cpp  StreambufType1.h  StreambufType2.cpp  StreambufType2.h  TraversalFallback.cpp  TraversalFallback.h  TraversalType1.cpp  TraversalType1.h  TraversalType2.cpp  TraversalType2.h  streambuf_fallback.h  streambuf_type1.cpp  streambuf_type1.h  streambuf_type_2.cpp  streambuf_type_2.h  traversal_fallback.cpp  traversal_fallback.h  traversal_type_1.cpp  traversal_type_1.h  traversal_type_2.cpp  traversal_type_2.h
src/libappimage/desktop_integration/: CMakeLists.txt  IntegrationManager.cpp  Thumbnailer.cpp  Thumbnailer.h  constants.h
src/libappimage/desktop_integration/integrator/: CMakeLists.txt  DesktopEntryEditError.h  DesktopEntryEditor.cpp  DesktopEntryEditor.h  DesktopIntegrationErrors.h  DesktopIntegrationResources.h  Integrator.cpp  Integrator.h  MimeInfoEditor.cpp  MimeInfoEditor.h  PayloadEntriesCache.cpp  PayloadEntriesCache.h  ResourcesExtractor.cpp  (+1 more)
src/libappimage/legacy/: CMakeLists.txt  appimage_handler.c  desktop_file_integration_private.h  desktop_integration.c  libappimage.c  type1.c  type2.c  type2.h
src/libappimage/utils/: CMakeLists.txt  DLHandle.h  Elf.cpp  Elf.h  ElfFile.cpp  ElfFile.h  HashLib.cpp  IconHandle.cpp  IconHandle.h  IconHandleCairoRsvg.cpp  IconHandleCairoRsvg.h  IconHandleDLOpenCairoRsvg.cpp  IconHandleDLOpenCairoRsvg.h  IconHandlePriv.h  Logger.cpp  Logger.h  MagicBytesChecker.cpp  MagicBytesChecker.h  StringSanitizer.cpp  StringSanitizer.h  UrlEncoder.cpp  UrlEncoder.h  filesystem.cpp  filesystem.h  hashlib.cpp  hashlib.h  magic_bytes_checker.cpp  path_utils.cpp  path_utils.h
src/libappimage_desktop_integration/: CMakeLists.txt  DesktopEntryBuilder.cpp  DesktopEntryBuilder.h  DesktopIntegrationErrors.h  IntegrationManager.cpp  Integrator.cpp  ResourcesExtractor.cpp  ResourcesExtractor.h
src/libappimage_desktop_integration/core/: CMakeLists.txt  Integrator.cpp  Integrator.h  integrator.cpp  integrator.h
src/libappimage_desktop_integration/integrator/: CMakeLists.txt  DesktopEntryEditor.cpp  Integrator.cpp  Integrator.h
src/libappimage_desktop_integration/utils/: CMakeLists.txt  DesktopExecEntryTokenizer.cpp  DesktopExecEntryTokenizer.h  Environment.cpp  Environment.h  HashLib.cpp  HashLib.h  XdgUserDirs.cpp  XdgUserDirs.h  environment.cpp  environment.h  hashlib.cpp  hashlib.h  md5sum.cpp  md5sum.h  xdg_user_dirs.cpp  xdg_user_dirs.h
src/libappimage_hashlib/: CMakeLists.txt
src/libappimage_hashlib/include/: hashlib.h
src/libappimage_shared/: CMakeLists.txt  digest.c  elf.c
src/patches/: patch-squashfuse.sh.in  squashfuse_dlopen.c  squashfuse_dlopen.h  squashfuse_zstd_support.patch
src/xdg-basedir/: CMakeLists.txt
tests/: CMakeLists.txt  file_management_utils.hpp  fixtures.h  testAppImage.cpp  testMagicBytesChecker.cpp  test_desktop_integration.cpp  test_desktop_integration_0.2.cpp  test_libappimage.cpp  test_libappimage_0.2.cpp  test_utils_crypto_hash.cpp  test_utils_filesystem.cpp
tests/client_app/: CMakeLists.txt  main.c
tests/data/: AppImageExtract_6_no_magic_bytes-x86_64.AppImage  CMakeLists.txt  Echo-no-integrate-x86_64.AppImage  Echo-x86_64.AppImage  Hello_World-x86_64.gzip.AppImage  Hello_World-x86_64.xz.AppImage  Hello_World-x86_64.zstd.AppImage  broken-desktop-file-x86_64.AppImage  elffile  minimal.iso
tests/data/squashfs-root/: echo.desktop  echo.desktop.in
tests/libappimage/: CMakeLists.txt  TestLibappimage++.cpp  TraversalFallbackImplTests.cpp  TraversalType1ImplTests.cpp  TraversalType2ImplTests.cpp  test_libappimage_0.2.cpp  test_utile_magic_bytes_checker.cpp
tests/libappimage/desktop_integration/: CMakeLists.txt  TestIntegrationManager.cpp  TestThumbnailer.cpp
tests/libappimage/legacy/: CMakeLists.txt  file_management_utils.hpp  test-xdg-basedir.cpp  test_desktop_integration.cpp  test_getsection.cpp  test_libappimage.cpp  test_shared.cpp
tests/libappimage/temporarydirectory/: CMakeLists.txt  TemporaryDirectory.cpp  TemporaryDirectory.h
tests/libappimage/utils/: StringSanitizerTest.cpp  TestIconHandle.cpp  TestLogger.cpp  TestMagicBytesChecker.cpp  TestPayloadEntriesCache.cpp  TestResourcesExtractor.cpp  TestUtilsElf.cpp
tests/libappimage_desktop_integration/: CMakeLists.txt  DesktopExecEntryTokenizerTests.cpp  DesktopFileBuilderTests.cpp  TestDesktopFileBuilder.cpp  TestDesktopIntegration.cpp  TestIntegrationManager.cpp  TestResourcesExtractor.cpp  test_desktop_integration_0.2.cpp
tests/libappimage_desktop_integration/integrator/: TestDesktopEntryEditor.cpp
(+70 files in other folders)
